<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/avatar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/email"
        android:drawableTint="@color/colorPurple"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        tools:ignore="TextFields"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/user"
        android:drawableTint="@color/colorPurple"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/passBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/password"
        android:drawableTint="@color/colorPurple"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameBox"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logout"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="@+id/passBox"
        app:layout_constraintStart_toStartOf="@+id/passBox"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/update_profile"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="@+id/passBox"
        app:layout_constraintStart_toStartOf="@+id/passBox"
        app:layout_constraintTop_toBottomOf="@+id/passBox" />

</androidx.constraintlayout.widget.ConstraintLayout>