<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <!-- Group for all actual quiz content, hidden initially -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quizContentGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/background_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_timer"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_24"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />


        <TextView
            android:id="@+id/questionCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_1_10"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            app:drawableTint="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableRightCompat="@drawable/ic_question" />

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/who_invented_android_studio"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:srcCompat="@drawable/fiftyfiftyline"
            android:contentDescription="@string/flifeline" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:srcCompat="@drawable/audiencepoll"
            android:contentDescription="@string/laudianc" />

        <TextView
            android:id="@+id/option_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/option_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="@+id/option_1"
            app:layout_constraintStart_toStartOf="@+id/option_1"
            app:layout_constraintTop_toBottomOf="@+id/option_1" />

        <TextView
            android:id="@+id/option_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="@+id/option_2"
            app:layout_constraintStart_toStartOf="@+id/option_2"
            app:layout_constraintTop_toBottomOf="@+id/option_2" />

        <TextView
            android:id="@+id/option_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="@+id/option_3"
            app:layout_constraintStart_toStartOf="@+id/option_3"
            app:layout_constraintTop_toBottomOf="@+id/option_3" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_2"
            android:onClick="onClick"
            android:text="@string/next"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quizBtn"
            app:layout_constraintTop_toBottomOf="@+id/option_4" />

        <Button
            android:id="@+id/quizBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_1"
            android:onClick="onClick"
            android:text="@string/quit"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Loading Overlay, visible initially -->
    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
